Fix remaining merge conflict